(lang dune 3.0)

(name ppx_deriving_unparse)
(generate_opam_files true)

(source
 (github dariusf/ppx_deriving_unparse))

(authors "Darius Foo")

(maintainers "darius.foo.tw@gmail.com")

(package
 (name ppx_deriving_unparse)
 (synopsis "Derives unparsing functions")
 (description "Print syntax trees with precedence and associativity"))
